[package]
name = "emp_tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8" }
structopt = { version = "0.3.20" }
rand_core = { version = "0.6.4" }
bytemuck = {version = "1.13", features = ["derive"]}

[target."cfg(target_arch = \"aarch64\")".dependencies]
sha2 = { version = "0.10.7", features = ["asm"] }
[target."cfg(any(target_arch = \"x86\", target_arch = \"x86_64\"))".dependencies]
sha2 = {version = "0.10.7"}

[dev-dependencies]
rand = { version = "0.8" }
rand_chacha = { version = "0.3" }
criterion = { version = "0.5.1" }

[[bench]]
name = "block"
harness = false

[[bench]]
name = "aes"
harness = false

[[bench]]
name = "hash"
harness = false

[[bench]]
name = "prg"
harness = false

[[bench]]
name = "ggm"
harness = false

[[example]]
name = "netio"
path = "examples/netio.rs"

[[example]]
name = "prg"
path = "examples/prg.rs"
