[package]
name = "emp_tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = {version = "0.8"}
structopt = {version = "0.3.20"}

[dev-dependencies]
rand = {version = "0.8"}
rand_chacha = {version = "0.3"}
criterion = {version = "0.5.1"}

[[bench]]
name = "block"
harness = false

[[example]]
name = "netio"
path = "examples/netio.rs"